--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="contenedor">
             <h1>Tienda de Mascotas</h1>
             <h1>🐕 Chucho Miau 🐈</h1>
-            <img src="img/header_animales.jpeg" alt="Chucho Miau">
+            <img src="img/header_animales.png" alt="Chucho Miau">
             <nav>
                 <ul>
                     <li><a href="#home">Inicio</a></li> 
